<resources>
    <string name="app_name">Ejemplo</string>
    <string name="imagen">Imagen</string>
    <string name="iniciar">Iniciar</string>
    <string name="rodrigo_gangas">Rodrigo Gangas</string>
    <string name="titulo">Meteorologia</string>
    <string name="sol">Sol</string>
    <string name="temperatura">Temperatura</string>
    <string name="viento">Viento</string>
    <string name="humedad">Humedad</string>
    <string name="presion_atmosferica">Presion Atmosferica</string>
    <string name="presion">Presion</string>
    <string name="_1008_2">1008.2</string>
    <string name="hpa">hpa</string>
    <string name="_30">30</string>
    <string name="c">°C</string>
    <string name="_16">16</string>
    <string name="km_h">Km/h</string>
    <string name="porciento">%</string>
    <string name="_60">60</string>
    <string name="volver">Volver</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="_0000">0000</string>
    <string name="_00">00</string>
</resources>