<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:id="@+id/main"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="35dp">

        <Button
            android:id="@+id/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:text="@string/volver"
            app:icon="@drawable/back"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@id/volver"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/imagen"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/meteorologia" />



        <TextView
            android:fontFamily="@font/lato_regular"
            android:gravity="center_horizontal"
            android:layout_marginVertical="20sp"
            android:textSize="60sp"
            android:id="@+id/textButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:text="@string/temperatura"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="00"
            android:hint="@string/_00"
            android:inputType="number"
            android:textColorHint="@color/darkyellow"
            android:layout_above= "@id/btnEliminar"
            android:layout_marginBottom="40dp"
            android:textSize="150sp"
            android:textColor="@color/orange"
            android:layout_marginStart="50dp"
            />

        <TextView
            android:id="@+id/grados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/num"
            android:text="@string/c"
            android:layout_above="@id/btnEliminar"
            android:layout_marginBottom="50dp"
            android:textSize="150sp"
            android:textColor="@color/white"
            />


        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/borrar"
            android:textColor="@color/white"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/presion"
            app:iconTint="@color/white"
            app:backgroundTint="@color/darkred"
            app:icon="@drawable/eliminar"
            app:iconGravity="start"

            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            />



    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>