<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".humedad">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <Button
            android:id="@+id/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:text="@string/volver"
            app:icon="@drawable/back"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/volver"
            android:contentDescription="@string/imagen"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/meteorologia" />

        <TextView
            android:id="@+id/textButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_horizontal"
            android:text="@string/humedad"
            android:textColor="@color/white"
            android:textSize="80sp" />

        <EditText
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnEliminar"
            android:layout_marginStart="110dp"
            android:layout_marginBottom="40dp"
            android:autofillHints="00"
            android:inputType="number"
            android:hint="@string/_00"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/porciento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnEliminar"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="50dp"
            android:layout_toEndOf="@id/num"
            android:text="@string/porciento"
            android:textColor="@color/white"
            android:textSize="100sp" />


        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/borrar"
            android:textColor="@color/white"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/presion"
            app:iconTint="@color/white"
            app:backgroundTint="@color/darkred"
            app:icon="@drawable/eliminar"
            app:iconGravity="start"

            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            />


    </RelativeLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>