<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:id="@+id/main"
    tools:context=".presion"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:text="@string/volver"
            app:icon="@drawable/back"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/imagen"
            android:layout_below="@id/volver"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/meteorologia" />

        <TextView
            android:id="@+id/textButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_horizontal"
            android:text="@string/presion_atmosferica"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnEliminar"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/_0000"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:autofillHints="0000"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/porciento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnEliminar"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="60dp"
            android:layout_alignParentEnd="true"
            android:text="@string/hpa"
            android:textColor="@color/white"
            android:textSize="70sp" />




        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/borrar"
            android:textColor="@color/white"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/presion"
            app:iconTint="@color/white"
            app:backgroundTint="@color/darkred"
            app:icon="@drawable/eliminar"
            app:iconGravity="start"

            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>