<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"

    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="35dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"

            android:contentDescription="@string/imagen"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/meteorologia" />

        <TextView
            android:fontFamily="@font/lato_regular"
            android:gravity="center_horizontal"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="150dp"
            android:textSize="70sp"
            android:id="@+id/textButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:text="@string/presion_atmosferica"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1008_2"
            android:layout_above="@id/imageView7"
            android:textSize="80sp"
            android:layout_marginBottom="70dp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/porciento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/num"
            android:layout_marginStart="20dp"
            android:text="@string/hpa"
            android:layout_above="@id/imageView7"
            android:textSize="80sp"
            android:layout_marginBottom="70dp"
            android:textColor="@color/white"
            />


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:contentDescription="@string/presion"
            app:srcCompat="@drawable/clock"
            android:layout_alignParentBottom="true"
            />



    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>