<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">


    <TextView
        android:fontFamily="@font/lato_regular"
        android:id="@+id/titulo"
        android:textSize="60sp"
        android:textColor="@color/skyblue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:srcCompat="@drawable/meteorologia"
        />

    <Button
        android:fontFamily="@font/lato_regular"
        android:id="@+id/filledButton"
        android:layout_width="250dp"
        android:layout_height="60dp"

        app:layout_constraintBottom_toBottomOf="@id/rodrigo"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/skyblue"
        android:textColor="@color/black"
        android:text="@string/iniciar"
        />

    <TextView
        android:fontFamily="@font/lato_regular"
        android:id="@+id/rodrigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rodrigo_gangas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>