<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"

    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"

            android:contentDescription="@string/imagen"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/meteorologia" />

        <TextView
            android:id="@+id/textButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_horizontal"
            android:text="@string/humedad"
            android:textColor="@color/white"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/imageView7"
            android:layout_marginStart="110dp"
            android:layout_marginBottom="40dp"
            android:text="@string/_60"
            android:textColor="@color/white"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/porciento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/imageView7"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@id/num"
            android:text="@string/porciento"
            android:textColor="@color/white"
            android:textSize="100sp" />


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/humedad"
            app:srcCompat="@drawable/humedad" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>