<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:id="@+id/main"
    tools:context=".menu"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="35dp">

        <Button
            android:id="@+id/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:text="@string/volver"
            app:icon="@drawable/back"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/volver"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/imagen"
            app:srcCompat="@drawable/meteorologia" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/imageView2"
            android:layout_marginHorizontal="40sp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/imagen"
            app:srcCompat="@drawable/sunny" />

        <Button
            android:fontFamily="@font/lato_regular"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_marginStart="20sp"
            android:textSize="20sp"
            android:id="@+id/btnTemperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView4"
            android:text="@string/temperatura"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_below="@id/imageView2"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="40sp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/imagen"
            android:layout_height="100dp"
            app:srcCompat="@drawable/aire" />

        <Button
            android:id="@+id/btnViento"
            android:fontFamily="@font/lato_regular"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_marginEnd="50sp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_alignParentEnd="true"
            android:text="@string/viento"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/btnTemperatura"
            android:layout_marginHorizontal="40sp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/imagen"
            app:srcCompat="@drawable/humedad" />

        <Button
            android:fontFamily="@font/lato_regular"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_marginStart="35sp"
            android:textSize="20sp"
            android:id="@+id/btnHumedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView5"
            android:text="@string/humedad"
            android:textColor="@color/white"/>


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/btnViento"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/imagen"
            app:srcCompat="@drawable/clock" />

        <Button
            android:fontFamily="@font/lato_regular"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_marginEnd="45sp"
            android:textSize="20sp"
            android:id="@+id/btnPresion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView6"
            android:layout_alignParentEnd="true"
            android:text="@string/presion"
            android:textColor="@color/white"/>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>